Fix focus ring damage sometimes being 1 pixel off.

crrev.com/2386033002 changed the focus ring stroke from being 1 pixel to
being scaled based on the zoom level, which changed the type to a float.
When calculating the outdent (and thus damage) the width value lost
precsion and so at certain fractional zoom levels would leave a 1 pixel
line behind. This patch ceils the width value instead, to make sure that
pixel is redrawn when necessary.

R=bokan@chromium.org
BUG=658648

Review-Url: https://codereview.chromium.org/2460683002
Cr-Commit-Position: refs/heads/master@{#429153}

Former-commit-id: b18b97a7da62e85fc08eddaefbc95b49c4d7b648